# decor-experiments

./: decor.cabal  stack.yaml
draft/: compile  custom.sty  grammar.sty  making-random-judgements.rst
draft/templates/: default.latex
exe/: decor-magnifique.hs  decor-simple.hs  decor.hs  main.hs
mrj/: README.md  decor.cabal
mrj/src/Decor/: DC.hs  Parser.hs  Soup.hs  Utils.hs
mrj/src/Decor/Soup/: Trivial.hs
mrj/src/Decor/Types/: DC.hs
src/: DCore.hs
src/Decor/: Gen.hs  Main.hs  Parser.hs  Soup.hs  Tree.hs  Types.hs  UnionFind.hs
src/Decor/Soup/: Simple.hs  SimpleIO.hs  SimpleRandom.hs  SimpleStreaming.hs  Tree.hs  Trivial.hs
src/Decor/Tree/: Lazy.hs
src/Decor/Types/: Convert.hs
test/: test-decor.hs
