name:                decor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lysxia/decor#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Decor.DC
    Decor.Gen
    Decor.Main
    Decor.Soup
    Decor.Types
    Decor.Types.DC
  build-depends:
    base >= 4.9 && < 5,
    bimap,
    free,
    one-liner,
    containers,
    microlens-platform,
    mtl,
    transformers,
    QuickCheck,
    QuickCheck-GenT
  default-language:    Haskell2010
  ghc-options: -Wall -Wno-name-shadowing

source-repository head
  type:     git
  location: https://github.com/Lysxia/decor

test-suite test-decor
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-decor.hs
  build-depends:
    base >= 4.9 && < 5,
    bimap,
    HUnit,
    one-liner,
    containers,
    transformers,
    QuickCheck,
    QuickCheck-GenT,
    decor
  default-language:    Haskell2010
  ghc-options: -Wunused-top-binds
