name:                decor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lysxia/decor#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag magnifique
  Default: False

library
  hs-source-dirs:      src
  exposed-modules:
    Decor.DC
    Decor.Gen
    Decor.Main
    Decor.Parser
    Decor.Soup
    Decor.Soup.Simple
    Decor.Soup.SimpleRandom
    Decor.Soup.SimpleStreaming
    Decor.Soup.Trivial
    Decor.Types
    Decor.Types.DC
    Decor.UnionFind
    Decor.Utils
  build-depends:
    base >= 4.9 && < 5,
    bimap,
    exceptions,
    free,
    one-liner,
    containers,
    kan-extensions,
    megaparsec,
    microlens-platform,
    MonadRandom,
    mtl,
    primitive,
    transformers,
    vector,
    QuickCheck,
    QuickCheck-GenT
  default-language:    Haskell2010
  ghc-options: -Wall -Wno-name-shadowing

source-repository head
  type:     git
  location: https://github.com/Lysxia/decor

executable decor-simple
  main-is: decor-simple.hs
  hs-source-dirs: exe
  build-depends:
    base,
    brick,
    containers,
    free,
    optparse-generic,
    vty,
    decor
  ghc-options: -threaded -rtsopts
  default-language: Haskell2010

executable decor-magnifique
  main-is: decor-magnifique.hs
  hs-source-dirs: exe
  if flag(magnifique)
    build-depends:
      magnifique,
      base,
      brick,
      decor
  else
    buildable: False
  ghc-options: -threaded
  default-language: Haskell2010

test-suite test-decor
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-decor.hs
  build-depends:
    base >= 4.9 && < 5,
    bimap,
    HUnit,
    one-liner,
    containers,
    transformers,
    QuickCheck,
    QuickCheck-GenT,
    decor
  default-language:    Haskell2010
  ghc-options: -Wunused-top-binds
