name:                decor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lysxia/decor#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Decor.DC
    Decor.Gen
    -- Decor.Main
    Decor.Parser
    Decor.Soup
    Decor.Soup.Simple
    Decor.Soup.SimpleRandom
    Decor.Soup.SimpleStreaming
    Decor.Soup.Tree
    Decor.Types
    Decor.Types.Convert
    Decor.Types.DC
    Decor.UnionFind
    Decor.Utils
  build-depends:
    base >= 4.9 && < 5,
    bimap,
    exceptions,
    free,
    one-liner >= 0.8.1,
    containers,
    kan-extensions,
    megaparsec,
    microlens-platform,
    MonadRandom,
    mtl,
    pretty,
    primitive,
    ref-fd,
    transformers,
    vector,
    QuickCheck,
    QuickCheck-GenT
  default-language:    Haskell2010
  ghc-options: -Wall -Wno-name-shadowing

source-repository head
  type:     git
  location: https://github.com/Lysxia/decor

executable decor
  main-is: decor.hs
  hs-source-dirs: exe
  build-depends:
    ansi-terminal,
    base,
    brick,
    containers,
    free,
    optparse-generic >= 1.1.5,
    vty,
    decor
  ghc-options: -threaded -rtsopts
  ghc-options: -Wall -Wno-name-shadowing
  default-language: Haskell2010

test-suite test-decor
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-decor.hs
  build-depends:
    base >= 4.9 && < 5,
    bimap,
    HUnit,
    one-liner,
    containers,
    transformers,
    QuickCheck,
    QuickCheck-GenT,
    decor
  default-language:    Haskell2010
  ghc-options: -Wunused-top-binds
